# cashly-ai

./: .coverage  .env  .env.docker  .gitignore  Dockerfile  Makefile  README.md  ai_config.py  app.py  debug_intent_flow.py  debug_intent_resolver.py  docker-compose.yml  error.txt  error2.txt  pyproject.toml  requirements.txt  requirements_intent.txt  run.py  seed_multi_turn_only.py  setup_assistants.py  setup_vector_db.py  test.py  test_assistants.py  test_budgeting.py  test_forecasting.py  test_full_flow.py  test_intent_integration.py  test_trend_analysis.py  test_vector_search.py  update_assistants.py  vector_db_seeder.py
app/: app.py  main.py
app/config/: assistants.yaml
app/core/: config.py  dependencies.py  exceptions.py  middleware.py  mlflow_config.py
app/db/: connection.py  init.py  singleton_registry.py
app/models/: anomaly.py  base.py  budgeting.py  categorization.py  conversation_embedding.py  forecasting.py  trend_analysis.py
app/schemas/: anomaly.py  assistant.py  budget.py  classification.py  forecast.py  health.py
app/utils/: data_processing.py  mlflow_model_registry.py  model_registry.py  shutdown_handler.py
config/: __init__.py  database.py  openai.py
controllers/: __init__.py  account_controller.py  anomaly_controller.py  base_controller.py  budget_controller.py  categorization_controller.py  fin_controller.py  forecast_controller.py  insights_controller.py  learning_controller.py
data/trained_models/: 001d7431ed.joblib  293d505215.joblib  3133848155.joblib  4c314cb8f3.joblib  5d956870c3.joblib  6198e223c3.joblib  743b5244ad.joblib  a0dd181d0d.joblib  aef5e17807.joblib  b0bddca889.joblib  fc3d97ae6b.joblib  (+2 more)
db/: connection.py  init.py  singleton_registry.py  vector_extension.py
docs/: tasks.md
middleware/: __init__.py  async_context.py  async_manager.py  connection_monitor.py
models/: anomaly.py  budgeting.py  categorization.py  conversation_data.py  conversation_embedding.py  forecasting.py  intents_data.json  trend_analysis.py
routes/: __init__.py  api_router.py
scripts/: debug_env.py  docker-start.sh  init-db.sql  prepare_training_data.py  run_tests.sh  seed_multi_turn_only.py  setup-s3-bucket.py  setup_assistants.py  setup_database.py  setup_intent_classification.py  setup_mlflow.py  setup_vector_db.py  start_mlflow_server.py  test-mlflow-integration.py  test_forecast_flow.py  test_model_predictions.py  train_initial_models.py  update_assistant_prompts.py  update_assistants.py  vector_db_seeder.py  verify_assistant_tools.py
seed_data/: conversation_variations.py  enhanced_vector_seeder.py  multi_turn_conversations.py  sample_conversations.py
services/: anomaly_service.py  budget_service.py  categorize_service.py  fin_learning_service.py  fin_service.py  forecast_service.py  insight_service.py
tests/: conftest.py  debug_intent_determiner.py  debug_intent_flow.py  debug_test.py  test_anomaly.py  test_categorization.py  test_fin_learning_service.py  test_forecasting.py  test_full_flow.py  test_trend_analysis.py
util/: connection_health.py  model_registry.py
(+347 files in other folders)
